@@ -15,6 +15,7 @@ import static org.hamcrest.Matchers.*;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.fail;
+import static org.junit.jupiter.api.Assumptions.assumeTrue;
 
 import java.io.ByteArrayInputStream;
 import java.io.ByteArrayOutputStream;
@@ -36,6 +37,8 @@ import java.util.List;
 import java.util.Map;
 import java.util.jar.Attributes;
 import java.util.jar.JarFile;
+import java.util.jar.JarOutputStream;
+import java.util.jar.Manifest;
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 
@@ -82,8 +85,7 @@ import dev.jbang.util.CommandBuffer;
 import dev.jbang.util.JavaUtil;
 import dev.jbang.util.NetUtil;
 import dev.jbang.util.Util;
-
-import picocli.CommandLine;
+import dev.jbang.util.WarTestFixtures;
 
 public class TestRun extends BaseTest {
 
@@ -102,10 +104,8 @@ public class TestRun extends BaseTest {
 		environmentVariables.clear("JAVA_HOME");
 		String arg = examplesTestFolder.resolve("helloworld.java").toAbsolutePath().toString();
 		String extracp = examplesTestFolder.resolve("hellojar.jar").toAbsolutePath().toString();
-		CommandLine.ParseResult pr = JBang.getCommandLine()
-			.parseArgs("run", "--deps", "info.picocli:picocli:4.6.3",
-					"--cp", extracp, arg);
-		Run run = (Run) pr.subcommand().commandSpec().userObject();
+		Run run = JBang.parseCommand("run", "--deps", "info.picocli:picocli:4.6.3",
+				"--cp", extracp, arg);
 
 		ProjectBuilder pb = run.createProjectBuilderForRun();
 		Project code = pb.build(arg);
@@ -115,7 +115,7 @@ public class TestRun extends BaseTest {
 
 		String result = Project.codeBuilder(ctx).build().build().generate();
 
-		assertThat(result, matchesPattern("^.*java(.exe)? .*$"));
+		assertThat(result, matchesPattern("^.*java(.exe(\\^\")?)? .*$"));
 		assertThat(result, endsWith("helloworld"));
 		assertThat(result, containsString("classpath"));
 		assertThat(result, matchesRegex(".*helloworld\\.java\\.[a-z0-9]+.helloworld\\.jar.*"));
@@ -139,14 +139,13 @@ public class TestRun extends BaseTest {
 	void testHelloWorldAlias() throws IOException {
 		environmentVariables.clear("JAVA_HOME");
 		Path cat = examplesTestFolder.resolve("jbang-catalog.json").toAbsolutePath();
-		CommandLine.ParseResult pr = JBang.getCommandLine().parseArgs("run", "--catalog", cat.toString(), "helloworld");
-		Run run = (Run) pr.subcommand().commandSpec().userObject();
+		Run run = JBang.parseCommand("run", "--catalog", cat.toString(), "helloworld");
 
 		ProjectBuilder pb = run.createProjectBuilderForRun();
 		pb.catalog(cat.toFile());
 		String result = run.updateGeneratorForRun(pb.build("helloworld").codeBuilder().build()).build().generate();
 
-		assertThat(result, matchesPattern("^.*java(.exe)? .*$"));
+		assertThat(result, matchesPattern("^.*java(.exe(\\^\")?)? .*$"));
 		assertThat(result, endsWith("helloworld"));
 		assertThat(result, containsString("classpath"));
 		assertThat(result, containsString(".jar"));
@@ -172,8 +171,7 @@ public class TestRun extends BaseTest {
 
 		environmentVariables.clear("JAVA_HOME");
 		String arg = examplesTestFolder.resolve("helloworld.jsh").toAbsolutePath().toString();
-		CommandLine.ParseResult pr = JBang.getCommandLine().parseArgs("run", arg);
-		Run run = (Run) pr.subcommand().commandSpec().userObject();
+		Run run = JBang.parseCommand("run", arg);
 
 		ProjectBuilder pb = run.createProjectBuilderForRun();
 		Project prj = pb.build(arg);
@@ -181,7 +179,7 @@ public class TestRun extends BaseTest {
 		String result = run.updateGeneratorForRun(CmdGenerator.builder(prj)).build().generate();
 
 		assertThat(result,
-				matchesPattern("^.*jshell(.exe)? --execution=local -J--add-modules=ALL-SYSTEM --startup.*$"));
+				matchesPattern("^.*jshell(.exe(\\^\")?)? --execution=local -J--add-modules=ALL-SYSTEM --startup.*$"));
 		assertThat(result, not(containsString("  ")));
 		assertThat(result, containsString(arg));
 		assertThat(result.split(Pattern.quote(arg), -1).length, equalTo(2));
@@ -197,8 +195,7 @@ public class TestRun extends BaseTest {
 
 		environmentVariables.clear("JAVA_HOME");
 		String arg = examplesTestFolder.resolve("ec.jsh").toAbsolutePath().toString();
-		CommandLine.ParseResult pr = JBang.getCommandLine().parseArgs("run", "-s", arg, "-c", "Collector2.class");
-		Run run = (Run) pr.subcommand().commandSpec().userObject();
+		Run run = JBang.parseCommand("run", "-s", arg, "-c", "Collector2.class");
 
 		ProjectBuilder pb = run.createProjectBuilderForRun();
 		Project prj = pb.build(
@@ -208,7 +205,7 @@ public class TestRun extends BaseTest {
 
 		assertThat(result,
 				matchesPattern(
-						"^.*jshell(.exe)? --execution=local -J--add-modules=ALL-SYSTEM (\\^\\\")?--class-path=.*(\\^\\\")? (\\^\\\")?-J--class-path=.*(\\^\\\")? --startup=DEFAULT (\\^\\\")?--startup.*$"));
+						"^.*jshell(.exe(\\^\")?)? --execution=local -J--add-modules=ALL-SYSTEM (\\^\\\")?--class-path=.*(\\^\\\")? (\\^\\\")?-J--class-path=.*(\\^\\\")? --startup=DEFAULT (\\^\\\")?--startup.*$"));
 		assertThat(result, containsString("eclipse-collections-api"));
 	}
 
@@ -217,8 +214,7 @@ public class TestRun extends BaseTest {
 		environmentVariables.clear("JAVA_HOME");
 		Path hw = examplesTestFolder.resolve("helloworld.java");
 		String hwtxt = Util.readFileContent(hw);
-		CommandLine.ParseResult pr = JBang.getCommandLine().parseArgs("run", "-c", hwtxt, "firstarg");
-		Run run = (Run) pr.subcommand().commandSpec().userObject();
+		Run run = JBang.parseCommand("run", "-c", hwtxt, "firstarg");
 
 		ProjectBuilder pb = run.createProjectBuilderForRun();
 		pb.mainClass("fakemain");
@@ -227,22 +223,49 @@ public class TestRun extends BaseTest {
 
 		String result = run.updateGeneratorForRun(CmdGenerator.builder(prj)).build().generate();
 
-		assertThat(result, matchesPattern("^.*java(.exe)?.*$"));
+		assertThat(result, matchesPattern("^.*java(.exe(\\^\")?)?.*$"));
 		assertThat(result, containsString("firstarg"));
 	}
 
 	@Test
 	void testMarkdown() throws IOException {
 		String arg = examplesTestFolder.resolve("readme.md").toAbsolutePath().toString();
-		CommandLine.ParseResult pr = JBang.getCommandLine().parseArgs("run", arg);
-		Run run = (Run) pr.subcommand().commandSpec().userObject();
+		Run run = JBang.parseCommand("run", arg);
 
 		ProjectBuilder pb = run.createProjectBuilderForRun();
 		Project prj = pb.build(arg);
 
 		String result = run.updateGeneratorForRun(CmdGenerator.builder(prj)).build().generate();
 
-		assertThat(result, matchesPattern("^.*jshell(.exe)?.+--class-path=.*figlet.*? --startup.*$"));
+		assertThat(result, matchesPattern("^.*jshell(.exe(\\^\")?)?.+--class-path=.*figlet.*? --startup.*$"));
+	}
+
+	@Test
+	void testMarkdownWithMainMethod() throws IOException {
+		Path readme = jbangTempDir.resolve("readme.md");
+		writeString(readme,
+				"```java\nclass Readme {\n    public static void main(String... args) {\n        System.out.println(\"Hello\");\n    }\n}\n```\n");
+
+		Run run = JBang.parseCommand("run", readme.toString());
+		Project prj = run.createProjectBuilderForRun().build(readme.toString());
+		CmdGeneratorBuilder genb = Project.codeBuilder(BuildContext.forProject(prj)).build();
+
+		String result = run.updateGeneratorForRun(genb).build().generate();
+
+		assertThat(result, matchesPattern("^.*java(.exe(\\^\\\")?)? .*$"));
+		assertThat(result, containsString("Readme"));
+	}
+
+	@Test
+	void testMarkdownWithUnnamedMainMethod() throws Exception {
+		assumeTrue(JavaUtil.getCurrentMajorJavaVersion() >= 25);
+		Path readme = jbangTempDir.resolve("readme.md");
+		writeString(readme,
+				"```java\nvoid main() {\n    System.out.println(\"Hello unnamed\");\n}\n```\n");
+
+		CaptureResult<Integer> result = checkedRun(readme.toString());
+
+		assertThat(result.out, containsString("Hello unnamed"));
 	}
 
 	@Test
@@ -254,15 +277,14 @@ public class TestRun extends BaseTest {
 		Files.write(readmeFileWin, readmeText.replace("\n", "\r\n").getBytes());
 
 		String arg = readmeFileWin.toAbsolutePath().toString();
-		CommandLine.ParseResult pr = JBang.getCommandLine().parseArgs("run", arg);
-		Run run = (Run) pr.subcommand().commandSpec().userObject();
+		Run run = JBang.parseCommand("run", arg);
 
 		ProjectBuilder pb = run.createProjectBuilderForRun();
 		Project prj = pb.build(arg);
 
 		String result = run.updateGeneratorForRun(CmdGenerator.builder(prj)).build().generate();
 
-		assertThat(result, matchesPattern("^.*jshell(.exe)?.+--class-path=.*figlet.*? --startup.*$"));
+		assertThat(result, matchesPattern("^.*jshell(.exe(\\^\")?)?.+--class-path=.*figlet.*? --startup.*$"));
 	}
 
 	@Test
@@ -277,23 +299,21 @@ public class TestRun extends BaseTest {
 
 		wms.start();
 		String arg = "http://localhost:" + wms.port() + "/readme.md";
-		CommandLine.ParseResult pr = JBang.getCommandLine().parseArgs("run", arg);
-		Run run = (Run) pr.subcommand().commandSpec().userObject();
+		Run run = JBang.parseCommand("run", arg);
 
 		ProjectBuilder pb = run.createProjectBuilderForRun();
 		Project prj = pb.build(arg);
 
 		String result = run.updateGeneratorForRun(CmdGenerator.builder(prj)).build().generate();
 
-		assertThat(result, matchesPattern("^.*jshell(.exe)?.+--class-path=.*figlet.*? --startup.*$"));
+		assertThat(result, matchesPattern("^.*jshell(.exe(\\^\")?)?.+--class-path=.*figlet.*? --startup.*$"));
 	}
 
 	@Test
 	void testEmptyInteractiveShell(@TempDir File dir) throws IOException {
 
 		environmentVariables.clear("JAVA_HOME");
-		CommandLine.ParseResult pr = JBang.getCommandLine().parseArgs("run", "a");
-		Run run = (Run) pr.subcommand().commandSpec().userObject();
+		Run run = JBang.parseCommand("run", "a");
 
 		File empty = new File(dir, "empty.jsh");
 		empty.createNewFile();
@@ -304,7 +324,7 @@ public class TestRun extends BaseTest {
 		String result = run.updateGeneratorForRun(CmdGenerator.builder(prj)).build().generate();
 
 		assertThat(result,
-				matchesPattern("^.*jshell(.exe)? --execution=local -J--add-modules=ALL-SYSTEM --startup.*$"));
+				matchesPattern("^.*jshell(.exe(\\^\")?)? --execution=local -J--add-modules=ALL-SYSTEM --startup.*$"));
 		assertThat(result, not(containsString("  ")));
 		assertThat(result, containsString("empty.jsh"));
 		assertThat(result, not(containsString("--source 11")));
@@ -317,8 +337,7 @@ public class TestRun extends BaseTest {
 
 		environmentVariables.clear("JAVA_HOME");
 		String arg = examplesTestFolder.resolve("hellojsh").toAbsolutePath().toString();
-		CommandLine.ParseResult pr = JBang.getCommandLine().parseArgs("run", "--jsh", arg, "helloworld");
-		Run run = (Run) pr.subcommand().commandSpec().userObject();
+		Run run = JBang.parseCommand("run", "--jsh", arg, "helloworld");
 
 		ProjectBuilder pb = run.createProjectBuilderForRun();
 		Project prj = pb.build(arg);
@@ -326,7 +345,7 @@ public class TestRun extends BaseTest {
 		String result = run.updateGeneratorForRun(CmdGenerator.builder(prj)).build().generate();
 
 		assertThat(result,
-				matchesPattern("^.*jshell(.exe)? --execution=local -J--add-modules=ALL-SYSTEM --startup.*$"));
+				matchesPattern("^.*jshell(.exe(\\^\")?)? --execution=local -J--add-modules=ALL-SYSTEM --startup.*$"));
 		assertThat(result, not(containsString("  ")));
 		assertThat(result, containsString("hellojsh"));
 		assertThat(result, not(containsString("--source 11")));
@@ -342,16 +361,14 @@ public class TestRun extends BaseTest {
 
 		String jar = examplesTestFolder.resolve("hellojar.jar").toAbsolutePath().toString();
 
-		CommandLine.ParseResult pr = JBang.getCommandLine()
-			.parseArgs("run", "--deps", "info.picocli:picocli:4.6.3",
-					"--cp", "dummy.jar", jar);
-		Run run = (Run) pr.subcommand().commandSpec().userObject();
+		Run run = JBang.parseCommand("run", "--deps", "info.picocli:picocli:4.6.3",
+				"--cp", "dummy.jar", jar);
 
 		ProjectBuilder pb = run.createProjectBuilderForRun();
 		Project code = pb.build(jar);
 
 		String result = run.updateGeneratorForRun(CmdGenerator.builder(code)).build().generate();
-		assertThat(result, matchesPattern("^.*java(.exe)?.*"));
+		assertThat(result, matchesPattern("^.*java(.exe(\\^\")?)?.*"));
 		assertThat(code.getMainClass(), not(nullValue()));
 
 		assertThat(result, containsString("picocli-4.6.3.jar"));
@@ -359,7 +376,7 @@ public class TestRun extends BaseTest {
 		assertThat(result, containsString("hellojar.jar"));
 
 		assertThat(code.getResourceRef().getFile().toString(), equalTo(jar));
-		assertThat(code.isJar(), equalTo(true));
+		assertThat(code.isExecutableArchive(), equalTo(true));
 
 		run.doCall();
 	}
@@ -373,8 +390,7 @@ public class TestRun extends BaseTest {
 			TrustedSources.instance().add(jar, tdir.resolve("test.trust").toFile());
 
 			environmentVariables.clear("JAVA_HOME");
-			CommandLine.ParseResult pr = JBang.getCommandLine().parseArgs("run", jar);
-			Run run = (Run) pr.subcommand().commandSpec().userObject();
+			Run run = JBang.parseCommand("run", jar);
 
 			ProjectBuilder pb = run.createProjectBuilderForRun();
 			Project code = pb.build(jar);
@@ -395,8 +411,7 @@ public class TestRun extends BaseTest {
 		environmentVariables.clear("JAVA_HOME");
 		String jar = "info.picocli:picocli-codegen:4.6.3";
 
-		CommandLine.ParseResult pr = JBang.getCommandLine().parseArgs("run", jar);
-		Run run = (Run) pr.subcommand().commandSpec().userObject();
+		Run run = JBang.parseCommand("run", jar);
 
 		ProjectBuilder pb = run.createProjectBuilderForRun();
 		Project code = pb.build(jar);
@@ -418,8 +433,7 @@ public class TestRun extends BaseTest {
 
 		String jar = "info.picocli:picocli-codegen:4.6.3";
 
-		CommandLine.ParseResult pr = JBang.getCommandLine().parseArgs("run", "-i", jar);
-		Run run = (Run) pr.subcommand().commandSpec().userObject();
+		Run run = JBang.parseCommand("run", "-i", jar);
 
 		ProjectBuilder pb = run.createProjectBuilderForRun();
 		Project code = pb.build(jar);
@@ -428,10 +442,10 @@ public class TestRun extends BaseTest {
 				matchesPattern(".*jbang_tests_maven.*codegen-4.6.3.jar"));
 
 		String result = run.updateGeneratorForRun(CmdGenerator.builder(code)).build().generate();
-		assertThat(result, matchesPattern("^.*jshell(.exe)?.*"));
+		assertThat(result, matchesPattern("^.*jshell(.exe(\\^\")?)?.*"));
 		assertThat(code.getMainClass(), nullValue());
 
-		assertThat(code.isJar(), equalTo(true));
+		assertThat(code.isExecutableArchive(), equalTo(true));
 
 		run.doCall();
 	}
@@ -453,8 +467,7 @@ public class TestRun extends BaseTest {
 		environmentVariables.clear("JAVA_HOME");
 		String jar = "qcli";
 
-		CommandLine.ParseResult pr = JBang.getCommandLine().parseArgs("run", jar);
-		Run run = (Run) pr.subcommand().commandSpec().userObject();
+		Run run = JBang.parseCommand("run", jar);
 
 		ProjectBuilder pb = run.createProjectBuilderForRun();
 		Project code = pb.build(jar);
@@ -479,8 +492,7 @@ public class TestRun extends BaseTest {
 		environmentVariables.clear("JAVA_HOME");
 		String jar = "org.eclipse.jgit:org.eclipse.jgit.pgm:5.9.0.202009080501-r";
 
-		CommandLine.ParseResult pr = JBang.getCommandLine().parseArgs("run", jar);
-		Run run = (Run) pr.subcommand().commandSpec().userObject();
+		Run run = JBang.parseCommand("run", jar);
 
 		ProjectBuilder pb = run.createProjectBuilderForRun();
 		Project code = pb.build(jar);
@@ -499,10 +511,8 @@ public class TestRun extends BaseTest {
 		environmentVariables.clear("JAVA_HOME");
 		String jar = "info.picocli:picocli-codegen:4.6.3";
 
-		CommandLine.ParseResult pr = JBang.getCommandLine()
-			.parseArgs("run", "--main",
-					"picocli.codegen.aot.graalvm.ReflectionConfigGenerator", jar);
-		Run run = (Run) pr.subcommand().commandSpec().userObject();
+		Run run = JBang.parseCommand("run", "--main",
+				"picocli.codegen.aot.graalvm.ReflectionConfigGenerator", jar);
 
 		ProjectBuilder pb = run.createProjectBuilderForRun();
 		Project code = pb.build(jar);
@@ -524,10 +534,8 @@ public class TestRun extends BaseTest {
 		environmentVariables.clear("JAVA_HOME");
 		String jar = "info.picocli:picocli-codegen:4.6.3";
 
-		CommandLine.ParseResult pr = JBang.getCommandLine()
-			.parseArgs("run", "--module", "--main",
-					"picocli.codegen.aot.graalvm.ReflectionConfigGenerator", jar);
-		Run run = (Run) pr.subcommand().commandSpec().userObject();
+		Run run = JBang.parseCommand("run", "--module=", "--main",
+				"picocli.codegen.aot.graalvm.ReflectionConfigGenerator", jar);
 
 		ProjectBuilder pb = run.createProjectBuilderForRun();
 		Project code = pb.build(jar);
@@ -558,9 +566,7 @@ public class TestRun extends BaseTest {
 		environmentVariables.set("JBANG_DIR", jbangTempDir.toString());
 		Files.write(jbangTempDir.resolve(Catalog.JBANG_CATALOG_JSON), aliases.getBytes());
 
-		CommandLine.ParseResult pr = JBang.getCommandLine().parseArgs("run", "aliaswithrepo");
-
-		Run run = (Run) pr.subcommand().commandSpec().userObject();
+		Run run = JBang.parseCommand("run", "aliaswithrepo");
 
 		ProjectBuilder pb = run.createProjectBuilderForRun();
 
@@ -579,10 +585,8 @@ public class TestRun extends BaseTest {
 		environmentVariables.clear("JAVA_HOME");
 		String jar = "org.eclipse.jgit:org.eclipse.jgit.pgm:5.9.0.202009080501-r";
 		String extracp = examplesTestFolder.resolve("hellojar.jar").toAbsolutePath().toString();
-		CommandLine.ParseResult pr = JBang.getCommandLine()
-			.parseArgs("run", "--deps", "info.picocli:picocli:4.6.3",
-					"--cp", extracp, jar);
-		Run run = (Run) pr.subcommand().commandSpec().userObject();
+		Run run = JBang.parseCommand("run", "--deps", "info.picocli:picocli:4.6.3",
+				"--cp", extracp, jar);
 
 		ProjectBuilder pb = run.createProjectBuilderForRun();
 		Project code = pb.build(jar);
@@ -600,17 +604,15 @@ public class TestRun extends BaseTest {
 
 		environmentVariables.clear("JAVA_HOME");
 		String arg = examplesTestFolder.resolve("helloworld.jsh").toAbsolutePath().toString();
-		CommandLine.ParseResult pr = JBang.getCommandLine()
-			.parseArgs("run", "--interactive", arg,
-					"blah");
-		Run run = (Run) pr.subcommand().commandSpec().userObject();
+		Run run = JBang.parseCommand("run", "--interactive", arg,
+				"blah");
 
 		ProjectBuilder pb = run.createProjectBuilderForRun();
 		Project prj = pb.build(arg);
 
 		String result = run.updateGeneratorForRun(CmdGenerator.builder(prj)).build().generate();
 
-		assertThat(result, matchesPattern("^.*jshell(.exe)? .*$"));
+		assertThat(result, matchesPattern("^.*jshell(.exe(\\^\")?)? .*$"));
 		assertThat(result, not(containsString("  ")));
 		assertThat(result, containsString("helloworld.jsh"));
 		assertThat(result, not(containsString("--source 11")));
@@ -624,8 +626,7 @@ public class TestRun extends BaseTest {
 	void testWithSourcesShell() throws IOException {
 		environmentVariables.clear("JAVA_HOME");
 		String arg = examplesTestFolder.resolve("main.jsh").toAbsolutePath().toString();
-		CommandLine.ParseResult pr = JBang.getCommandLine().parseArgs("run", arg);
-		Run run = (Run) pr.subcommand().commandSpec().userObject();
+		Run run = JBang.parseCommand("run", arg);
 
 		ProjectBuilder pb = run.createProjectBuilderForRun();
 		Project prj = pb.build(arg);
@@ -633,7 +634,7 @@ public class TestRun extends BaseTest {
 		String result = run.updateGeneratorForRun(CmdGenerator.builder(prj)).build().generate();
 
 		assertThat(result,
-				matchesPattern("^.*jshell(.exe)? --execution=local -J--add-modules=ALL-SYSTEM --startup.*$"));
+				matchesPattern("^.*jshell(.exe(\\^\")?)? --execution=local -J--add-modules=ALL-SYSTEM --startup.*$"));
 		assertThat(result, containsString("funcs.jsh"));
 		assertThat(result, containsString("main.jsh"));
 		assertThat(result, containsString("--startup=DEFAULT"));
@@ -644,8 +645,7 @@ public class TestRun extends BaseTest {
 	void testDebug() throws IOException {
 		environmentVariables.clear("JAVA_HOME");
 		String arg = examplesTestFolder.resolve("helloworld.java").toAbsolutePath().toString();
-		CommandLine.ParseResult pr = JBang.getCommandLine().parseArgs("run", "--debug", arg);
-		Run run = (Run) pr.subcommand().commandSpec().userObject();
+		Run run = JBang.parseCommand("run", "--debug", arg);
 
 		ProjectBuilder pb = run.createProjectBuilderForRun();
 		pb.mainClass("fakemain");
@@ -653,7 +653,7 @@ public class TestRun extends BaseTest {
 
 		String result = run.updateGeneratorForRun(CmdGenerator.builder(prj)).build().generate();
 
-		assertThat(result, matchesPattern("^.*java(.exe)? .*$"));
+		assertThat(result, matchesPattern("^.*java(.exe(\\^\")?)? .*$"));
 		assertThat(result, containsString("helloworld.java"));
 		assertThat(result, containsString("classpath"));
 //		assertThat(result, containsString(" --source 11 "));
@@ -665,8 +665,7 @@ public class TestRun extends BaseTest {
 	void testDebugHost() throws IOException {
 		environmentVariables.clear("JAVA_HOME");
 		String arg = examplesTestFolder.resolve("helloworld.java").toAbsolutePath().toString();
-		CommandLine.ParseResult pr = JBang.getCommandLine().parseArgs("run", "--debug=server=n", arg);
-		Run run = (Run) pr.subcommand().commandSpec().userObject();
+		Run run = JBang.parseCommand("run", "--debug=server=n", arg);
 
 		ProjectBuilder pb = run.createProjectBuilderForRun();
 		pb.mainClass("fakemain");
@@ -674,7 +673,7 @@ public class TestRun extends BaseTest {
 
 		String result = run.updateGeneratorForRun(CmdGenerator.builder(prj)).build().generate();
 
-		assertThat(result, matchesPattern("^.*java(.exe)? .*$"));
+		assertThat(result, matchesPattern("^.*java(.exe(\\^\")?)? .*$"));
 		assertThat(result, containsString("helloworld.java"));
 		assertThat(result, containsString("classpath"));
 		assertThat(result, containsString("-agentlib:jdwp=transport=dt_socket,server=n,suspend=y,address=4004"));
@@ -685,8 +684,7 @@ public class TestRun extends BaseTest {
 	void testDebugHostWithCustomPort() throws IOException {
 		environmentVariables.clear("JAVA_HOME");
 		String arg = examplesTestFolder.resolve("helloworld.java").toAbsolutePath().toString();
-		CommandLine.ParseResult pr = JBang.getCommandLine().parseArgs("run", "--debug=5000", arg);
-		Run run = (Run) pr.subcommand().commandSpec().userObject();
+		Run run = JBang.parseCommand("run", "--debug=5000", arg);
 
 		ProjectBuilder pb = run.createProjectBuilderForRun();
 		pb.mainClass("fakemain");
@@ -694,7 +692,7 @@ public class TestRun extends BaseTest {
 
 		String result = run.updateGeneratorForRun(CmdGenerator.builder(prj)).build().generate();
 
-		assertThat(result, matchesPattern("^.*java(.exe)? .*$"));
+		assertThat(result, matchesPattern("^.*java(.exe(\\^\")?)? .*$"));
 		assertThat(result, containsString("helloworld.java"));
 		assertThat(result, containsString("classpath"));
 		assertThat(result, containsString("-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=5000"));
@@ -706,8 +704,7 @@ public class TestRun extends BaseTest {
 
 		environmentVariables.clear("JAVA_HOME");
 		String arg = examplesTestFolder.resolve("classpath_example.java").toAbsolutePath().toString();
-		CommandLine.ParseResult pr = JBang.getCommandLine().parseArgs("run", arg);
-		Run run = (Run) pr.subcommand().commandSpec().userObject();
+		Run run = JBang.parseCommand("run", arg);
 
 		ProjectBuilder pb = run.createProjectBuilderForRun();
 		pb.mainClass("fakemain");
@@ -716,7 +713,7 @@ public class TestRun extends BaseTest {
 
 		String result = run.updateGeneratorForRun(CmdGenerator.builder(prj)).build().generate();
 
-		assertThat(result, matchesPattern("^.*java(.exe)? .*$"));
+		assertThat(result, matchesPattern("^.*java(.exe(\\^\")?)? .*$"));
 		assertThat(result, containsString("classpath_example.java"));
 //		assertThat(result, containsString(" --source 11 "));
 		assertThat(result, not(containsString("  ")));
@@ -729,15 +726,14 @@ public class TestRun extends BaseTest {
 
 		environmentVariables.clear("JAVA_HOME");
 		String arg = examplesTestFolder.resolve("classpath_example.java").toAbsolutePath().toString();
-		CommandLine.ParseResult pr = JBang.getCommandLine().parseArgs("run", "--interactive", arg);
-		Run run = (Run) pr.subcommand().commandSpec().userObject();
+		Run run = JBang.parseCommand("run", "--interactive", arg);
 
 		ProjectBuilder pb = run.createProjectBuilderForRun();
 		Project prj = pb.build(arg);
 
 		String result = run.updateGeneratorForRun(CmdGenerator.builder(prj)).build().generate();
 
-		assertThat(result, matchesPattern("^.*jshell(.exe)? .*$"));
+		assertThat(result, matchesPattern("^.*jshell(.exe(\\^\")?)? .*$"));
 		assertThat(result, (containsString("classpath_example.java")));
 //		assertThat(result, containsString(" --source 11 "));
 		assertThat(result, not(containsString("  ")));
@@ -751,11 +747,8 @@ public class TestRun extends BaseTest {
 
 		environmentVariables.clear("JAVA_HOME");
 		String arg = examplesTestFolder.resolve("classpath_example.java").toAbsolutePath().toString();
-		CommandLine.ParseResult pr = JBang.getCommandLine()
-			.setStopAtPositional(true)
-			.parseArgs("run", "-Dwonka=panda", "-Dquoted=see this",
-					arg, "-Dafter=wonka");
-		Run run = (Run) pr.subcommand().commandSpec().userObject();
+		Run run = JBang.parseCommand("run", "-Dwonka=panda", "-Dquoted=see this",
+				arg, "-Dafter=wonka");
 
 		assertThat(run.userParams.size(), is(1));
 
@@ -767,7 +760,7 @@ public class TestRun extends BaseTest {
 
 		String result = run.updateGeneratorForRun(CmdGenerator.builder(prj)).build().generate();
 
-		assertThat(result, matchesPattern("^.*java(.exe)? .*$"));
+		assertThat(result, matchesPattern("^.*java(.exe(\\^\")?)? .*$"));
 		assertThat(result, containsString("-Dwonka=panda"));
 		if (Util.isWindows()) {
 			assertThat(result, containsString("^\"-Dquoted=see^ this^\""));
@@ -791,8 +784,7 @@ public class TestRun extends BaseTest {
 		MatcherAssert.assertThat(Util.readString(pre.getResourceRef().getFile()),
 				containsString("Logger.getLogger(classpath_example.class);"));
 
-		CommandLine.ParseResult pr = JBang.getCommandLine().parseArgs("run", url);
-		Run run = (Run) pr.subcommand().commandSpec().userObject();
+		Run run = JBang.parseCommand("run", url);
 
 		ProjectBuilder pb = run.createProjectBuilderForRun();
 		pb.mainClass("fakemain");
@@ -807,8 +799,7 @@ public class TestRun extends BaseTest {
 	@Test
 	public void testMetaCharacters() throws IOException {
 		String url = examplesTestFolder.resolve("classpath_example.java").toFile().toURI().toString();
-		CommandLine.ParseResult pr = JBang.getCommandLine().parseArgs("run", url, " ~!@#$%^&*()-+\\:;'`<>?/,.{}[]\"");
-		Run run = (Run) pr.subcommand().commandSpec().userObject();
+		Run run = JBang.parseCommand("run", url, " ~!@#$%^&*()-+\\:;'`<>?/,.{}[]\"");
 
 		ProjectBuilder pb = run.createProjectBuilderForRun();
 		pb.mainClass("fakemain");
@@ -827,8 +818,7 @@ public class TestRun extends BaseTest {
 	void testDependenciesWithRanges() throws IOException {
 		environmentVariables.clear("JAVA_HOME");
 		String arg = examplesTestFolder.resolve("classpath_log_grab_with_ranges.java").toAbsolutePath().toString();
-		CommandLine.ParseResult pr = JBang.getCommandLine().parseArgs("run", arg);
-		Run run = (Run) pr.subcommand().commandSpec().userObject();
+		Run run = JBang.parseCommand("run", arg);
 
 		ProjectBuilder pb = run.createProjectBuilderForRun();
 		pb.mainClass("fakemain");
@@ -1002,9 +992,7 @@ public class TestRun extends BaseTest {
 		Util.writeString(f.toPath(), base);
 
 		String arg = f.getAbsolutePath();
-		CommandLine.ParseResult pr = JBang.getCommandLine().parseArgs("run", arg);
-
-		Run run = (Run) pr.subcommand().commandSpec().userObject();
+		Run run = JBang.parseCommand("run", arg);
 
 		ProjectBuilder pb = run.createProjectBuilderForRun();
 		Project prj = pb.build(arg);
@@ -1205,20 +1193,18 @@ public class TestRun extends BaseTest {
 	@Test
 	void testCDSNotPresent() {
 		String arg = examplesTestFolder.resolve("helloworld.java").toAbsolutePath().toString();
-		CommandLine.ParseResult pr = JBang.getCommandLine().parseArgs("run", arg);
-		Run run = (Run) pr.subcommand().commandSpec().userObject();
+		Run run = JBang.parseCommand("run", arg);
 
-		assert (run.runMixin.cds == null);
+		assert (run.runMixin.getCds() == null);
 	}
 
 	@Test
 	void testCDSPresentOnCli() throws IOException {
 		String arg = examplesTestFolder.resolve("helloworld.java").toAbsolutePath().toString();
-		CommandLine.ParseResult pr = JBang.getCommandLine().parseArgs("run", "--cds", arg);
-		Run run = (Run) pr.subcommand().commandSpec().userObject();
+		Run run = JBang.parseCommand("run", "--cds", arg);
 
-		assert (run.runMixin.cds != null);
-		assert (run.runMixin.cds);
+		assert (run.runMixin.getCds() != null);
+		assert (run.runMixin.getCds());
 	}
 
 	@Test
@@ -1227,8 +1213,7 @@ public class TestRun extends BaseTest {
 		Path p = output.resolve("cds.java");
 		writeString(p, source);
 
-		CommandLine.ParseResult pr = JBang.getCommandLine().parseArgs("run", p.toString());
-		Run run = (Run) pr.subcommand().commandSpec().userObject();
+		Run run = JBang.parseCommand("run", p.toString());
 
 		ProjectBuilder pb = run.createProjectBuilderForRun();
 		pb.mainClass("fakemain");
@@ -1247,11 +1232,10 @@ public class TestRun extends BaseTest {
 	@Test
 	void testNoCDSPresent() {
 		String arg = examplesTestFolder.resolve("helloworld.java").toAbsolutePath().toString();
-		CommandLine.ParseResult pr = JBang.getCommandLine().parseArgs("run", "--no-cds", arg);
-		Run run = (Run) pr.subcommand().commandSpec().userObject();
+		Run run = JBang.parseCommand("run", "--no-cds", arg);
 
-		assert (run.runMixin.cds != null);
-		assert (!run.runMixin.cds);
+		assert (run.runMixin.getCds() != null);
+		assert (!run.runMixin.getCds());
 	}
 
 	String agent = "//JAVAAGENT Can-Redefine-Classes=false Can-Retransform-Classes\n" +
@@ -1272,8 +1256,7 @@ public class TestRun extends BaseTest {
 		Path p = output.resolve("Agent.java");
 		writeString(p, agent);
 
-		CommandLine.ParseResult pr = JBang.getCommandLine().parseArgs("build", p.toFile().getAbsolutePath());
-		Build build = (Build) pr.subcommand().commandSpec().userObject();
+		Build build = JBang.parseCommand("build", p.toFile().getAbsolutePath());
 
 		ProjectBuilder pb = build.createProjectBuilderForBuild();
 		Project prj = pb.build(p.toFile().getAbsolutePath());
@@ -1300,8 +1283,7 @@ public class TestRun extends BaseTest {
 		Path p = output.resolve("Agent.java");
 		writeString(p, preagent);
 
-		CommandLine.ParseResult pr = JBang.getCommandLine().parseArgs("build", p.toFile().getAbsolutePath());
-		Build build = (Build) pr.subcommand().commandSpec().userObject();
+		Build build = JBang.parseCommand("build", p.toFile().getAbsolutePath());
 
 		ProjectBuilder pb = build.createProjectBuilderForBuild();
 		Project prj = pb.build(p.toFile().getAbsolutePath());
@@ -1340,15 +1322,13 @@ public class TestRun extends BaseTest {
 		Path mainFile = output.toPath().resolve("main.java");
 		Util.writeString(mainFile, base.replace("dualclass", "main"));
 
-		CommandLine.ParseResult pr = JBang.getCommandLine()
-			.parseArgs("run",
-					"--javaagent=" + agentFile.toAbsolutePath() + "=optionA",
-					"--javaagent=org.jboss.byteman:byteman:4.0.13",
-					mainFile.toAbsolutePath().toString());
-		Run run = (Run) pr.subcommand().commandSpec().userObject();
+		Run run = JBang.parseCommand("run",
+				"--javaagent=" + agentFile.toAbsolutePath() + "=optionA",
+				"--javaagent=org.jboss.byteman:byteman:4.0.13",
+				mainFile.toAbsolutePath().toString());
 
-		assertThat(run.runMixin.javaAgentSlots.containsKey(agentFile.toAbsolutePath().toString()), is(true));
-		assertThat(run.runMixin.javaAgentSlots.get(agentFile.toAbsolutePath().toString()), equalTo("optionA"));
+		assertThat(run.runMixin.getJavaAgentSlots().containsKey(agentFile.toAbsolutePath().toString()), is(true));
+		assertThat(run.runMixin.getJavaAgentSlots().get(agentFile.toAbsolutePath().toString()), equalTo("optionA"));
 
 		ProjectBuilder pb = run.createProjectBuilderForRun().mainClass("fakemain");
 		Project prj = pb.build(mainFile);
@@ -1370,28 +1350,24 @@ public class TestRun extends BaseTest {
 
 	@Test
 	void testJavaAgentParsing() {
-		CommandLine.ParseResult pr = JBang.getCommandLine().parseArgs("run", "--javaagent=xyz.jar", "wonka.java");
-		Run run = (Run) pr.subcommand().commandSpec().userObject();
+		Run run = JBang.parseCommand("run", "--javaagent=xyz.jar", "wonka.java");
 
-		assertThat(run.runMixin.javaAgentSlots, hasKey("xyz.jar"));
+		assertThat(run.runMixin.getJavaAgentSlots(), hasKey("xyz.jar"));
 	}
 
 	@Test
 	void testJavaAgentViaGAV() {
-		CommandLine.ParseResult pr = JBang.getCommandLine()
-			.parseArgs("run",
-					"--javaagent=org.jboss.byteman:byteman:4.0.13", "wonka.java");
-		Run run = (Run) pr.subcommand().commandSpec().userObject();
+		Run run = JBang.parseCommand("run",
+				"--javaagent=org.jboss.byteman:byteman:4.0.13", "wonka.java");
 
-		assertThat(run.runMixin.javaAgentSlots, hasKey("org.jboss.byteman:byteman:4.0.13"));
+		assertThat(run.runMixin.getJavaAgentSlots(), hasKey("org.jboss.byteman:byteman:4.0.13"));
 	}
 
 	@Test
 	void testAssertions() throws IOException {
 		File f = examplesTestFolder.resolve("resource.java").toFile();
 
-		CommandLine.ParseResult pr = JBang.getCommandLine().parseArgs("run", "--ea", f.getAbsolutePath());
-		Run run = (Run) pr.subcommand().commandSpec().userObject();
+		Run run = JBang.parseCommand("run", "--ea", f.getAbsolutePath());
 
 		ProjectBuilder pb = run.createProjectBuilderForRun();
 		pb.mainClass("fakemain");
@@ -1407,11 +1383,9 @@ public class TestRun extends BaseTest {
 	void testSystemAssertions() throws IOException {
 		File f = examplesTestFolder.resolve("resource.java").toFile();
 
-		CommandLine.ParseResult pr = JBang.getCommandLine()
-			.parseArgs("run", "--enablesystemassertions", "--main",
-					"fakemain",
-					f.getAbsolutePath());
-		Run run = (Run) pr.subcommand().commandSpec().userObject();
+		Run run = JBang.parseCommand("run", "--esa", "--main",
+				"fakemain",
+				f.getAbsolutePath());
 
 		ProjectBuilder pb = run.createProjectBuilderForRun();
 		Project prj = pb.build(f.getAbsolutePath());
@@ -1427,8 +1401,7 @@ public class TestRun extends BaseTest {
 		Path p = output.resolve("cds.java");
 		writeString(p, source);
 
-		CommandLine.ParseResult pr = JBang.getCommandLine().parseArgs("run", p.toString());
-		Run run = (Run) pr.subcommand().commandSpec().userObject();
+		Run run = JBang.parseCommand("run", p.toString());
 
 		ProjectBuilder pb = run.createProjectBuilderForRun();
 		pb.mainClass("fakemain");
@@ -1442,11 +1415,9 @@ public class TestRun extends BaseTest {
 	void testEnablePreview() throws IOException {
 		File f = examplesTestFolder.resolve("resource.java").toFile();
 
-		CommandLine.ParseResult pr = JBang.getCommandLine()
-			.parseArgs("run", "--enable-preview", "--main",
-					"fakemain",
-					f.getAbsolutePath());
-		Run run = (Run) pr.subcommand().commandSpec().userObject();
+		Run run = JBang.parseCommand("run", "--enable-preview", "--main",
+				"fakemain",
+				f.getAbsolutePath());
 
 		ProjectBuilder pb = run.createProjectBuilderForRun();
 		Project prj = pb.build(f.getAbsolutePath());
@@ -1460,11 +1431,9 @@ public class TestRun extends BaseTest {
 	void testEnablePreviewJsh() throws IOException {
 		File f = examplesTestFolder.resolve("resource.java").toFile();
 
-		CommandLine.ParseResult pr = JBang.getCommandLine()
-			.parseArgs("run", "--enable-preview", "-i", "--main",
-					"fakemain",
-					f.getAbsolutePath());
-		Run run = (Run) pr.subcommand().commandSpec().userObject();
+		Run run = JBang.parseCommand("run", "--enable-preview", "-i", "--main",
+				"fakemain",
+				f.getAbsolutePath());
 
 		ProjectBuilder pb = run.createProjectBuilderForRun();
 		Project prj = pb.build(f.getAbsolutePath());
@@ -1483,11 +1452,9 @@ public class TestRun extends BaseTest {
 	void testEnablePreviewJava() throws IOException {
 		File f = examplesTestFolder.resolve("resource.java").toFile();
 
-		CommandLine.ParseResult pr = JBang.getCommandLine()
-			.parseArgs("run", "--enable-preview", "--main",
-					"fakemain",
-					f.getAbsolutePath());
-		Run run = (Run) pr.subcommand().commandSpec().userObject();
+		Run run = JBang.parseCommand("run", "--enable-preview", "--main",
+				"fakemain",
+				f.getAbsolutePath());
 
 		ProjectBuilder pb = run.createProjectBuilderForRun();
 		Project prj = pb.build(f.getAbsolutePath());
@@ -1684,8 +1651,7 @@ public class TestRun extends BaseTest {
 		Path p = output.resolve("script");
 		writeString(p, script);
 
-		CommandLine.ParseResult pr = JBang.getCommandLine().parseArgs("build", p.toFile().getAbsolutePath());
-		Build build = (Build) pr.subcommand().commandSpec().userObject();
+		Build build = JBang.parseCommand("build", p.toFile().getAbsolutePath());
 
 		ProjectBuilder pb = build.createProjectBuilderForBuild();
 		Project prj = pb.build(p.toFile().getAbsolutePath());
@@ -1711,8 +1677,7 @@ public class TestRun extends BaseTest {
 		Path p = output.resolve("script");
 		writeString(p, ambigiousScript);
 
-		CommandLine.ParseResult pr = JBang.getCommandLine().parseArgs("build", p.toFile().getAbsolutePath());
-		Build build = (Build) pr.subcommand().commandSpec().userObject();
+		Build build = JBang.parseCommand("build", p.toFile().getAbsolutePath());
 
 		ProjectBuilder pb = build.createProjectBuilderForBuild();
 		Project prj = pb.build(p.toFile().getAbsolutePath());
@@ -1727,10 +1692,8 @@ public class TestRun extends BaseTest {
 		Path p = output.resolve("script");
 		writeString(p, ambigiousScript);
 
-		CommandLine.ParseResult pr = JBang.getCommandLine()
-			.parseArgs("build", "-m", "Three",
-					p.toFile().getAbsolutePath());
-		Build build = (Build) pr.subcommand().commandSpec().userObject();
+		Build build = JBang.parseCommand("build", "-m", "Three",
+				p.toFile().getAbsolutePath());
 
 		ProjectBuilder pb = build.createProjectBuilderForBuild();
 		Project prj = pb.build(p.toFile().getAbsolutePath());
@@ -1745,8 +1708,7 @@ public class TestRun extends BaseTest {
 		String mainFile = examplesTestFolder.resolve("foo.java").toString();
 		String incFile = examplesTestFolder.resolve("bar/Bar.java").toString();
 
-		CommandLine.ParseResult pr = JBang.getCommandLine().parseArgs("build", "-s", incFile, mainFile);
-		Build build = (Build) pr.subcommand().commandSpec().userObject();
+		Build build = JBang.parseCommand("build", "-s", incFile, mainFile);
 
 		ProjectBuilder pb = build.createProjectBuilderForBuild();
 		Project prj = pb.build(mainFile);
@@ -1773,9 +1735,7 @@ public class TestRun extends BaseTest {
 		Path mainFile = Paths.get("foo.java");
 		Path resFile = Paths.get("res/resource.properties");
 
-		CommandLine.ParseResult pr = JBang.getCommandLine()
-			.parseArgs("build", "--files", resFile.toString(), mainFile.toString());
-		Build build = (Build) pr.subcommand().commandSpec().userObject();
+		Build build = JBang.parseCommand("build", "--files", resFile.toString(), mainFile.toString());
 
 		ProjectBuilder pb = build.createProjectBuilderForBuild();
 		Project prj = pb.build(mainFile.toString());
@@ -1958,8 +1918,7 @@ public class TestRun extends BaseTest {
 	@Test
 	void testJFRPresent() throws IOException {
 		String arg = new File(examplesTestFolder.toFile(), "helloworld.java").getAbsolutePath();
-		CommandLine.ParseResult pr = JBang.getCommandLine().parseArgs("run", "--jfr", arg);
-		Run run = (Run) pr.subcommand().commandSpec().userObject();
+		Run run = JBang.parseCommand("run", "--jfr", arg);
 
 		ProjectBuilder pb = run.createProjectBuilderForRun();
 		pb.mainClass("fakemain");
@@ -1976,8 +1935,7 @@ public class TestRun extends BaseTest {
 	@Test
 	void testJVMOpts() throws IOException {
 		String arg = new File(examplesTestFolder.toFile(), "helloworld.java").getAbsolutePath();
-		CommandLine.ParseResult pr = JBang.getCommandLine().parseArgs("run", "--runtime-option=--show-version", arg);
-		Run run = (Run) pr.subcommand().commandSpec().userObject();
+		Run run = JBang.parseCommand("run", "--runtime-option=--show-version", arg);
 
 		ProjectBuilder pb = run.createProjectBuilderForRun();
 		pb.mainClass("fakemain");
@@ -1989,15 +1947,57 @@ public class TestRun extends BaseTest {
 	}
 
 	@Test
+	void testJVMOptsShortAttached() throws IOException {
+		String arg = new File(examplesTestFolder.toFile(), "helloworld.java").getAbsolutePath();
+		Run run = JBang.parseCommand("run", "-R-Xmx4G", "-R-Xms2G", arg);
+
+		ProjectBuilder pb = run.createProjectBuilderForRun();
+		pb.mainClass("fakemain");
+
+		Project prj = pb.build(arg);
+		String line = run.updateGeneratorForRun(CmdGenerator.builder(prj)).build().generate();
+
+		assertThat(line, containsString("-Xmx4G"));
+		assertThat(line, containsString("-Xms2G"));
+	}
+
+	@Test
+	void testJVMOptsShortSpace() throws IOException {
+		String arg = new File(examplesTestFolder.toFile(), "helloworld.java").getAbsolutePath();
+		Run run = JBang.parseCommand("run", "-R", "-Xmx4G", "-R", "-Xms2G", arg);
+
+		ProjectBuilder pb = run.createProjectBuilderForRun();
+		pb.mainClass("fakemain");
+
+		Project prj = pb.build(arg);
+		String line = run.updateGeneratorForRun(CmdGenerator.builder(prj)).build().generate();
+
+		assertThat(line, containsString("-Xmx4G"));
+		assertThat(line, containsString("-Xms2G"));
+	}
+
+	@Test
+	void testJVMOptsShortEquals() throws IOException {
+		String arg = new File(examplesTestFolder.toFile(), "helloworld.java").getAbsolutePath();
+		Run run = JBang.parseCommand("run", "-R=-Xmx4G", "-R=-Xms2G", arg);
+
+		ProjectBuilder pb = run.createProjectBuilderForRun();
+		pb.mainClass("fakemain");
+
+		Project prj = pb.build(arg);
+		String line = run.updateGeneratorForRun(CmdGenerator.builder(prj)).build().generate();
+
+		assertThat(line, containsString("-Xmx4G"));
+		assertThat(line, containsString("-Xms2G"));
+	}
+
+	@Test
 	void testJavaFXViaFileDeps() throws IOException {
 		Path fileref = examplesTestFolder.resolve("SankeyPlotTestWithDeps.java").toAbsolutePath();
 
 		// todo fix so --deps can use system properties
-		CommandLine.ParseResult pr = JBang.getCommandLine()
-			.parseArgs("run",
-					fileref.toString());
-
-		Run run = (Run) pr.subcommand().commandSpec().userObject();
+		Run run = JBang.parseCommand("run",
+				fileref.toString());
 
 		ProjectBuilder pb = run.createProjectBuilderForRun();
 		pb.mainClass("fakemain");
@@ -2013,14 +2013,11 @@ public class TestRun extends BaseTest {
 		Path fileref = examplesTestFolder.resolve("SankeyPlotTest.java").toAbsolutePath();
 
 		// todo fix so --deps can use system properties
-		CommandLine.ParseResult pr = JBang.getCommandLine()
-			.parseArgs("run",
-					"--deps", "org.openjfx:javafx-graphics:17:mac",
-					"--deps", "org.openjfx:javafx-controls:17:mac",
-					"--deps", "eu.hansolo.fx:charts:RELEASE",
-					fileref.toString());
-
-		Run run = (Run) pr.subcommand().commandSpec().userObject();
+		Run run = JBang.parseCommand("run",
+				"--deps", "org.openjfx:javafx-graphics:17:mac",
+				"--deps", "org.openjfx:javafx-controls:17:mac",
+				"--deps", "eu.hansolo.fx:charts:RELEASE",
+				fileref.toString());
 
 		ProjectBuilder pb = run.createProjectBuilderForRun();
 		pb.mainClass("fakemain");
@@ -2036,13 +2033,10 @@ public class TestRun extends BaseTest {
 		Path fileref = examplesTestFolder.resolve("SankeyPlotTest.java").toAbsolutePath();
 
 		// todo fix so --deps can use system properties
-		CommandLine.ParseResult pr = JBang.getCommandLine()
-			.parseArgs("run",
-					"--deps",
-					"org.openjfx:javafx-graphics:17:mac,org.openjfx:javafx-controls:17:mac,eu.hansolo.fx:charts:RELEASE",
-					fileref.toString());
-
-		Run run = (Run) pr.subcommand().commandSpec().userObject();
+		Run run = JBang.parseCommand("run",
+				"--deps",
+				"org.openjfx:javafx-graphics:17:mac,org.openjfx:javafx-controls:17:mac,eu.hansolo.fx:charts:RELEASE",
+				fileref.toString());
 
 		ProjectBuilder pb = run.createProjectBuilderForRun();
 		pb.mainClass("fakemain");
@@ -2058,15 +2052,12 @@ public class TestRun extends BaseTest {
 		Path fileref = examplesTestFolder.resolve("SankeyPlotTest.java").toAbsolutePath();
 
 		// todo fix so --deps can use system properties
-		CommandLine.ParseResult pr = JBang.getCommandLine()
-			.parseArgs("run",
-					"--java", "11",
-					"--deps", "org.openjfx:javafx-graphics:17:${os.detected.jfxname}",
-					"--deps", "org.openjfx:javafx-controls:17:${os.detected.jfxname}",
-					"--deps", "eu.hansolo.fx:charts:RELEASE",
-					fileref.toString());
-
-		Run run = (Run) pr.subcommand().commandSpec().userObject();
+		Run run = JBang.parseCommand("run",
+				"--java", "11",
+				"--deps", "org.openjfx:javafx-graphics:17:${os.detected.jfxname}",
+				"--deps", "org.openjfx:javafx-controls:17:${os.detected.jfxname}",
+				"--deps", "eu.hansolo.fx:charts:RELEASE",
+				fileref.toString());
 
 		ProjectBuilder pb = run.createProjectBuilderForRun();
 		pb.mainClass("fakemain");
@@ -2091,11 +2082,8 @@ public class TestRun extends BaseTest {
 		Util.writeString(f.toPath(), base);
 
 		String arg = f.getAbsolutePath();
-		CommandLine.ParseResult pr = JBang.getCommandLine()
-			.parseArgs("run", "--repos", "https://dummyrepo", "--deps",
-					"dummygroup:dummyart:0.1", arg);
-
-		Run run = (Run) pr.subcommand().commandSpec().userObject();
+		Run run = JBang.parseCommand("run", "--repos", "https://dummyrepo", "--deps",
+				"dummygroup:dummyart:0.1", arg);
 
 		ProjectBuilder pb = run.createProjectBuilderForRun();
 		Project prj = pb.build(arg);
@@ -2115,11 +2103,8 @@ public class TestRun extends BaseTest {
 	void testGAVCliReposAndDepsSingleRepo(@TempDir File output) throws IOException {
 		String jar = "info.picocli:picocli-codegen:4.6.3";
 
-		CommandLine.ParseResult pr = JBang.getCommandLine()
-			.parseArgs("run", "--repos", "https://dummyrepo", "--deps",
-					"dummygroup:dummyart:0.1", jar);
-
-		Run run = (Run) pr.subcommand().commandSpec().userObject();
+		Run run = JBang.parseCommand("run", "--repos", "https://dummyrepo", "--deps",
+				"dummygroup:dummyart:0.1", jar);
 
 		ProjectBuilder pb = run.createProjectBuilderForRun();
 
@@ -2138,12 +2123,9 @@ public class TestRun extends BaseTest {
 	void testGAVCliReposAndDepsTwoRepos(@TempDir File output) throws IOException {
 		String jar = "info.picocli:picocli-codegen:4.6.3";
 
-		CommandLine.ParseResult pr = JBang.getCommandLine()
-			.parseArgs("run", "--repos", "mavencentral", "--repos",
-					"https://dummyrepo", "--deps",
-					"dummygroup:dummyart:0.1", jar);
-
-		Run run = (Run) pr.subcommand().commandSpec().userObject();
+		Run run = JBang.parseCommand("run", "--repos", "mavencentral", "--repos",
+				"https://dummyrepo", "--deps",
+				"dummygroup:dummyart:0.1", jar);
 
 		ProjectBuilder pb = run.createProjectBuilderForRun();
 
@@ -2160,8 +2142,7 @@ public class TestRun extends BaseTest {
 
 	@Test
 	void testMissingSource() throws IOException {
-		CommandLine.ParseResult pr = JBang.getCommandLine().parseArgs("run", "-s", "missing.jsh", "-i");
-		Run run = (Run) pr.subcommand().commandSpec().userObject();
+		Run run = JBang.parseCommand("run", "-s", "missing.jsh", "-i");
 
 		ProjectBuilder pb = run.createProjectBuilderForRun();
 		try {
@@ -2183,12 +2164,10 @@ public class TestRun extends BaseTest {
 		Path p = output.resolve("script.java");
 		writeString(p, script);
 
-		CommandLine.ParseResult pr = JBang.getCommandLine().parseArgs("build", p.toFile().getAbsolutePath());
-		Build build = (Build) pr.subcommand().commandSpec().userObject();
-		build.call();
+		Build build = JBang.parseCommand("build", p.toFile().getAbsolutePath());
+		build.doCall();
 
-		pr = JBang.getCommandLine().parseArgs("run", "--deps", "org.example:dummy:1", p.toFile().getAbsolutePath());
-		Run run = (Run) pr.subcommand().commandSpec().userObject();
+		Run run = JBang.parseCommand("run", "--deps", "org.example:dummy:1", p.toFile().getAbsolutePath());
 
 		ProjectBuilder pb = run.createProjectBuilderForRun();
 		Project code = pb.build(p.toString());
@@ -2197,27 +2176,26 @@ public class TestRun extends BaseTest {
 			run.updateGeneratorForRun(code.codeBuilder().build()).build().generate();
 			fail("Should have thrown exception");
 		} catch (ExitException e) {
-			StringWriter sw = new StringWriter();
-			e.printStackTrace(new PrintWriter(sw));
-			assertThat(sw.toString(), containsString("in acme"));
-			assertThat(sw.toString(), not(containsString("in mavencentral=")));
+			// Walk the full cause chain for the repo name — the message may
+			// appear at different nesting levels depending on the resolver
+			String fullMessage = collectMessages(e);
+			assertThat(fullMessage, containsString("acme"));
+			assertThat(fullMessage, not(containsString("mavencentral=")));
 		}
 	}
 
 	@Test
 	void testBuildMissingScript() {
-		assertThrows(IllegalArgumentException.class, () -> {
-			CommandLine.ParseResult pr = JBang.getCommandLine().parseArgs("build");
-			Build build = (Build) pr.subcommand().commandSpec().userObject();
+		assertThrows(ExitException.class, () -> {
+			Build build = JBang.parseCommand("build");
 			build.doCall();
 		});
 	}
 
 	@Test
 	void testRunMissingScript() {
-		assertThrows(IllegalArgumentException.class, () -> {
-			CommandLine.ParseResult pr = JBang.getCommandLine().parseArgs("run");
-			Run run = (Run) pr.subcommand().commandSpec().userObject();
+		assertThrows(ExitException.class, () -> {
+			Run run = JBang.parseCommand("run");
 			run.doCall();
 		});
 	}
@@ -2247,9 +2225,7 @@ public class TestRun extends BaseTest {
 				+ "}";
 		Util.writeString(f.toPath(), content);
 
-		CommandLine.ParseResult pr = JBang.getCommandLine()
-			.parseArgs("run", "--fresh", "--repos", "central", f.getPath());
-		Run run = (Run) pr.subcommand().commandSpec().userObject();
+		Run run = JBang.parseCommand("run", "--fresh", "--repos", "central", f.getPath());
 
 		ProjectBuilder pb = run.createProjectBuilderForRun();
 		Project code = pb.build(f.getPath());
@@ -2262,8 +2238,7 @@ public class TestRun extends BaseTest {
 	void testForceJavaVersion() throws IOException {
 		int v = defaultJdkManager().getJdk(null).majorVersion();
 		String arg = examplesTestFolder.resolve("java4321.java").toAbsolutePath().toString();
-		CommandLine.ParseResult pr = JBang.getCommandLine().parseArgs("run", "--java", "" + v, arg);
-		Run run = (Run) pr.subcommand().commandSpec().userObject();
+		Run run = JBang.parseCommand("run", "--java", "" + v, arg);
 
 		ProjectBuilder pb = run.createProjectBuilderForRun();
 		Project code = pb.build(arg);
@@ -2274,8 +2249,7 @@ public class TestRun extends BaseTest {
 	void testBuildJbangProject() throws IOException {
 		environmentVariables.clear("JAVA_HOME");
 		String arg = examplesTestFolder.resolve("build.jbang").toAbsolutePath().toString();
-		CommandLine.ParseResult pr = JBang.getCommandLine().parseArgs("--preview", "run", arg);
-		Run run = (Run) pr.subcommand().commandSpec().userObject();
+		Run run = JBang.parseCommand("--preview", "run", arg);
 
 		ProjectBuilder pb = run.createProjectBuilderForRun();
 		Project prj = pb.build(arg);
@@ -2297,7 +2271,7 @@ public class TestRun extends BaseTest {
 
 		String result = run.updateGeneratorForRun(CmdGenerator.builder(prj)).build().generate();
 
-		assertThat(result, matchesPattern("^.*java(.exe)? .*$"));
+		assertThat(result, matchesPattern("^.*java(.exe(\\^\")?)? .*$"));
 		assertThat(result, endsWith("quote_notags"));
 		assertThat(result, containsString("classpath"));
 		assertThat(result, matchesRegex(".*build\\.jbang\\.[a-z0-9]+.build.jbang.jar.*"));
@@ -2320,8 +2294,7 @@ public class TestRun extends BaseTest {
 	void testBuildJbangProjectFolder() throws IOException {
 		environmentVariables.clear("JAVA_HOME");
 		String arg = examplesTestFolder.toAbsolutePath().toString();
-		CommandLine.ParseResult pr = JBang.getCommandLine().parseArgs("--preview", "run", arg);
-		Run run = (Run) pr.subcommand().commandSpec().userObject();
+		Run run = JBang.parseCommand("--preview", "run", arg);
 
 		ProjectBuilder pb = run.createProjectBuilderForRun();
 		Project prj = pb.build(arg);
@@ -2343,7 +2316,7 @@ public class TestRun extends BaseTest {
 
 		String result = run.updateGeneratorForRun(CmdGenerator.builder(prj)).build().generate();
 
-		assertThat(result, matchesPattern("^.*java(.exe)? .*$"));
+		assertThat(result, matchesPattern("^.*java(.exe(\\^\")?)? .*$"));
 		assertThat(result, endsWith("quote_notags"));
 		assertThat(result, containsString("classpath"));
 		assertThat(result, matchesRegex(".*build\\.jbang\\.[a-z0-9]+.build.jbang.jar.*"));
@@ -2376,7 +2349,7 @@ public class TestRun extends BaseTest {
 		wms.start();
 		String script = examplesTestFolder.resolve("helloworld.java").toString();
 		String arg = "http://localhost:" + wms.port() + "/readme.md";
-		CaptureResult<Integer> result = checkedRun(null, "run", "--verbose", script, "%" + arg);
+		CaptureResult<Integer> result = checkedRun("run", "--verbose", script, "%" + arg);
 		assertThat(result.err, containsString("Requesting HTTP GET " + arg));
 		Path file = NetUtil.downloadAndCacheFile(arg);
 		assertThat(result.err, containsString(file.toString()));
@@ -2397,7 +2370,7 @@ public class TestRun extends BaseTest {
 		wms.start();
 		String script = examplesTestFolder.resolve("helloworld.java").toString();
 		String arg = "http://localhost:" + wms.port() + "/readme.md";
-		CaptureResult<Integer> result = checkedRun(null, "run", "--verbose", script, "%{" + arg + "}");
+		CaptureResult<Integer> result = checkedRun("run", "--verbose", script, "%{" + arg + "}");
 		assertThat(result.err, containsString("Requesting HTTP GET " + arg));
 		Path file = NetUtil.downloadAndCacheFile(arg);
 		assertThat(result.err, containsString(file.toString()));
@@ -2428,7 +2401,7 @@ public class TestRun extends BaseTest {
 		String script = examplesTestFolder.resolve("helloworld.java").toString();
 		String arg1 = "http://localhost:" + wms.port() + "/readme1.md";
 		String arg2 = "http://localhost:" + wms.port() + "/readme2.md";
-		CaptureResult<Integer> result = checkedRun(null, "run", "--verbose", script,
+		CaptureResult<Integer> result = checkedRun("run", "--verbose", script,
 				"foo%{" + arg1 + "}bar%{" + arg2 + "}baz");
 		assertThat(result.err, containsString("Requesting HTTP GET " + arg1));
 		assertThat(result.err, containsString("Requesting HTTP GET " + arg2));
@@ -2454,7 +2427,7 @@ public class TestRun extends BaseTest {
 		String script = examplesTestFolder.resolve("helloworld.java").toString();
 		String agent = examplesTestFolder.resolve("JULAgent.java").toString();
 		String arg = "http://localhost:" + wms.port() + "/readme.md";
-		CaptureResult<Integer> result = checkedRun(null, "run", "--verbose",
+		CaptureResult<Integer> result = checkedRun("run", "--verbose",
 				"--javaagent=" + agent + "=test:%{" + arg + "}",
 				script);
 		assertThat(result.err, containsString("Requesting HTTP GET " + arg));
@@ -2470,7 +2443,7 @@ public class TestRun extends BaseTest {
 	void testRemoteFileArgSimpleEscaped() throws Exception {
 		String script = examplesTestFolder.resolve("helloworld.java").toString();
 		String arg = "http://localhost:1234/readme.md";
-		CaptureResult<Integer> result = checkedRun(null, "run", "--verbose", script, "%%" + arg);
+		CaptureResult<Integer> result = checkedRun("run", "--verbose", script, "%%" + arg);
 		assertThat(result.err, not(containsString("Requesting HTTP GET " + arg)));
 		assertThat(result.err, containsString("%" + arg));
 		assertThat(result.err, not(containsString("%%" + arg)));
@@ -2484,7 +2457,7 @@ public class TestRun extends BaseTest {
 		}
 		String script = examplesTestFolder.resolve("helloworld.java").toString();
 		String arg = "http://localhost:1234/readme.md";
-		CaptureResult<Integer> result = checkedRun(null, "run", "--verbose", script, "foo%%{" + arg + "}bar");
+		CaptureResult<Integer> result = checkedRun("run", "--verbose", script, "foo%%{" + arg + "}bar");
 		assertThat(result.err, not(containsString("Requesting HTTP GET " + arg)));
 		assertThat(result.err, containsString("foo%{" + arg + "}bar"));
 		assertThat(result.err, not(containsString("foo%%{" + arg + "}bar")));
@@ -2497,7 +2470,7 @@ public class TestRun extends BaseTest {
 			environmentVariables.set(Util.JBANG_RUNTIME_SHELL, "powershell");
 		}
 		String script = examplesTestFolder.resolve("helloworld.java").toString();
-		CaptureResult<Integer> result = checkedRun(null, "run", "--verbose", script,
+		CaptureResult<Integer> result = checkedRun("run", "--verbose", script,
 				"%{deps:info.picocli:picocli:4.6.3,log4j:log4j:1.2.17}");
 		assertThat(result.err, containsString("Resolving dependencies..."));
 		assertThat(result.err,
@@ -2513,7 +2486,7 @@ public class TestRun extends BaseTest {
 		}
 		String script = examplesTestFolder.resolve("helloworld.java").toString();
 		Assertions.assertThrows(ExitException.class,
-				() -> checkedRun(null, "run", "--verbose", script, "%{foo:bar}"));
+				() -> checkedRun("run", "--verbose", script, "%{foo:bar}"));
 	}
 
 	@Test
@@ -2521,8 +2494,7 @@ public class TestRun extends BaseTest {
 		environmentVariables.clear("JAVA_HOME");
 		String jar = "org.graalvm.python:python-launcher:23.1.0";
 
-		CommandLine.ParseResult pr = JBang.getCommandLine().parseArgs("run", jar);
-		Run run = (Run) pr.subcommand().commandSpec().userObject();
+		Run run = JBang.parseCommand("run", jar);
 
 		ProjectBuilder pb = run.createProjectBuilderForRun();
 		Project code = pb.build(jar);
@@ -2545,9 +2517,7 @@ public class TestRun extends BaseTest {
 				null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null);
 		CatalogUtil.addNearestAlias("echo", alias);
 
-		CommandLine.ParseResult pr = JBang.getCommandLine()
-			.parseArgs("run", "echo", "baz");
-		Run run = (Run) pr.subcommand().commandSpec().userObject();
+		Run run = JBang.parseCommand("run", "echo", "baz");
 
 		ProjectBuilder pb = run.createProjectBuilderForRun();
 		Project prj = pb.build("echo");
@@ -2563,9 +2533,7 @@ public class TestRun extends BaseTest {
 	@Test
 	void testCatalogAliasArguments() throws IOException {
 		File f = examplesTestFolder.resolve("jbang-catalog.json").toFile();
-		CommandLine.ParseResult pr = JBang.getCommandLine()
-			.parseArgs("run", "--catalog", f.getAbsolutePath(), "echo", "baz");
-		Run run = (Run) pr.subcommand().commandSpec().userObject();
+		Run run = JBang.parseCommand("run", "--catalog", f.getAbsolutePath(), "echo", "baz");
 
 		ProjectBuilder pb = run.createProjectBuilderForRun();
 		Project prj = pb.build("echo");
@@ -2581,15 +2549,14 @@ public class TestRun extends BaseTest {
 	@Test
 	void testNativeOptsVerbose() {
 		String arg = examplesTestFolder.resolve("helloworld.java").toAbsolutePath().toString();
-		JBang.getCommandLine().parseArgs("build", "-n", "-N=--verbose", arg);
+		JBang.parseCommand("build", "-n", "-N=--verbose", arg);
 	}
 
 	@Test
 	void testReadingAddExports() throws IOException {
 		String jar = "com.google.googlejavaformat:google-java-format:1.25.2";
 
-		CommandLine.ParseResult pr = JBang.getCommandLine().parseArgs("run", jar);
-		Run run = (Run) pr.subcommand().commandSpec().userObject();
+		Run run = JBang.parseCommand("run", jar);
 
 		ProjectBuilder pb = run.createProjectBuilderForRun();
 		Project code = pb.build(jar);
@@ -2604,12 +2571,129 @@ public class TestRun extends BaseTest {
 	}
 
 	@Test
+	void testReadingAddOpens(@TempDir Path output) throws IOException {
+		assumeTrue(Runtime.version().feature() >= 9, "requires Java 9+");
+		String opens = "java.base/java.lang  java.base/java.nio";
+		Path jar = createJar(output, Integer.toString(Runtime.version().feature()),
+				Collections.singletonMap(Project.ATTR_ADD_OPENS, opens));
+
+		Run run = JBang.parseCommand("run", jar.toString());
+
+		ProjectBuilder pb = run.createProjectBuilderForRun();
+		Project code = pb.build(jar.toString());
+		String cmd = CmdGenerator.builder(code).build().generate();
+
+		assertThat(code.getManifestAttributes(), hasEntry(Project.ATTR_ADD_OPENS, opens));
+		assertThat(cmd, containsString("--add-opens=java.base/java.lang=ALL-UNNAMED"));
+		assertThat(cmd, containsString("--add-opens=java.base/java.nio=ALL-UNNAMED"));
+	}
+
+	@Test
+	void testReadingEnableNativeAccess(@TempDir Path output) throws IOException {
+		assumeTrue(Runtime.version().feature() >= 22, "requires Java 22+");
+		Path jar = createJar(output, Integer.toString(Runtime.version().feature()),
+				Collections.singletonMap(Project.ATTR_ENABLE_NATIVE_ACCESS, "ALL-UNNAMED"));
+
+		Run run = JBang.parseCommand("run", jar.toString());
+
+		ProjectBuilder pb = run.createProjectBuilderForRun();
+		Project code = pb.build(jar.toString());
+
+		assertThat(code.getManifestAttributes(), hasEntry(Project.ATTR_ENABLE_NATIVE_ACCESS, "ALL-UNNAMED"));
+		assertThat(CmdGenerator.builder(code).build().generate(),
+				containsString("--enable-native-access=ALL-UNNAMED"));
+	}
+
+	@Test
+	void testPassesThroughEnableNativeAccessModuleName(@TempDir Path output) throws IOException {
+		assumeTrue(Runtime.version().feature() >= 22, "requires Java 22+");
+		Path jar = createJar(output, Integer.toString(Runtime.version().feature()),
+				Collections.singletonMap(Project.ATTR_ENABLE_NATIVE_ACCESS, "com.example.module"));
+
+		Run run = JBang.parseCommand("run", jar.toString());
+
+		ProjectBuilder pb = run.createProjectBuilderForRun();
+		Project code = pb.build(jar.toString());
+		String cmd = CmdGenerator.builder(code).build().generate();
+
+		assertThat(code.getManifestAttributes(), hasEntry(Project.ATTR_ENABLE_NATIVE_ACCESS, "com.example.module"));
+		assertThat(cmd, containsString("--enable-native-access=com.example.module"));
+	}
+
+	@Test
+	void testReadingAddExportsWithHelper(@TempDir Path output) throws IOException {
+		assumeTrue(Runtime.version().feature() >= 9, "requires Java 9+");
+		String exports = "jdk.compiler/com.sun.tools.javac.api jdk.compiler/com.sun.tools.javac.tree";
+		Path jar = createJar(output, Integer.toString(Runtime.version().feature()),
+				Collections.singletonMap(Project.ATTR_ADD_EXPORTS, exports));
+
+		Run run = JBang.parseCommand("run", jar.toString());
+
+		ProjectBuilder pb = run.createProjectBuilderForRun();
+		Project code = pb.build(jar.toString());
+		String cmd = CmdGenerator.builder(code).build().generate();
+
+		assertThat(code.getManifestAttributes(), hasEntry(Project.ATTR_ADD_EXPORTS, exports));
+		assertThat(cmd, containsString("--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED"));
+		assertThat(cmd, containsString("--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED"));
+	}
+
+	@Test
+	void testEmptyManifestAttributeIgnored(@TempDir Path output) throws IOException {
+		assumeTrue(Runtime.version().feature() >= 9, "requires Java 9+");
+		Path jar = createJar(output, Integer.toString(Runtime.version().feature()),
+				Collections.singletonMap(Project.ATTR_ADD_OPENS, "   "));
+
+		Run run = JBang.parseCommand("run", jar.toString());
+
+		ProjectBuilder pb = run.createProjectBuilderForRun();
+		Project code = pb.build(jar.toString());
+		String cmd = CmdGenerator.builder(code).build().generate();
+
+		// Should not add any --add-opens flags for empty/whitespace-only values
+		assertThat(cmd, not(containsString("--add-opens=")));
+	}
+
+	@Test
+	void testMultipleSpacesBetweenValues(@TempDir Path output) throws IOException {
+		assumeTrue(Runtime.version().feature() >= 9, "requires Java 9+");
+		String opens = "java.base/java.lang    java.base/java.nio";
+		Path jar = createJar(output, Integer.toString(Runtime.version().feature()),
+				Collections.singletonMap(Project.ATTR_ADD_OPENS, opens));
+
+		Run run = JBang.parseCommand("run", jar.toString());
+
+		ProjectBuilder pb = run.createProjectBuilderForRun();
+		Project code = pb.build(jar.toString());
+		String cmd = CmdGenerator.builder(code).build().generate();
+
+		// Should handle multiple spaces correctly
+		assertThat(cmd, containsString("--add-opens=java.base/java.lang=ALL-UNNAMED"));
+		assertThat(cmd, containsString("--add-opens=java.base/java.nio=ALL-UNNAMED"));
+	}
+
+	@Test
+	void testMultipleModulesForEnableNativeAccess(@TempDir Path output) throws IOException {
+		assumeTrue(Runtime.version().feature() >= 22, "requires Java 22+");
+		Path jar = createJar(output, Integer.toString(Runtime.version().feature()),
+				Collections.singletonMap(Project.ATTR_ENABLE_NATIVE_ACCESS, "module1 module2"));
+
+		Run run = JBang.parseCommand("run", jar.toString());
+
+		ProjectBuilder pb = run.createProjectBuilderForRun();
+		Project code = pb.build(jar.toString());
+		String cmd = CmdGenerator.builder(code).build().generate();
+
+		assertThat(cmd, containsString("--enable-native-access=module1"));
+		assertThat(cmd, containsString("--enable-native-access=module2"));
+	}
+
+	@Test
 	@Disabled("java 8 is not installing reliably on github action")
 	void testReadingNoAddExportsOnJava8() throws IOException {
 		String jar = "com.google.googlejavaformat:google-java-format:1.25.2";
 
-		CommandLine.ParseResult pr = JBang.getCommandLine().parseArgs("run", "--java=8", jar);
-		Run run = (Run) pr.subcommand().commandSpec().userObject();
+		Run run = JBang.parseCommand("run", "--java=8", jar);
 
 		ProjectBuilder pb = run.createProjectBuilderForRun();
 		Project code = pb.build(jar);
@@ -2662,5 +2746,57 @@ public class TestRun extends BaseTest {
 				Files.delete(p);
 			}
 		}
+	}
+
+	@Test
+	void testRunLocalWarFile() throws IOException {
+		environmentVariables.clear("JAVA_HOME");
+
+		Path warPath = jbangTempDir.resolve("test-app.war");
+		try {
+			// Create executable WAR file
+			WarTestFixtures.createExecutableWar(warPath, "TestMain");
+			String war = warPath.toAbsolutePath().toString();
+
+			// Verify the WAR file can be run
+			Run run = JBang.parseCommand("run", war);
+
+			ProjectBuilder pb = run.createProjectBuilderForRun();
+			Project code = pb.build(war);
+
+			// The WAR file should be recognized as a JAR/executable
+			assertThat(code.getResourceRef().getFile().toString(), equalTo(war));
+			assertThat(code.isExecutableArchive(), equalTo(true));
+
+			// Main class should be set from WAR manifest
+			assertThat(code.getMainClass(), equalTo("TestMain"));
+		} finally {
+			Files.deleteIfExists(warPath);
+		}
+	}
+
+	private Path createJar(Path outputDir, String buildJdk, Map<String, String> manifestAttributes) throws IOException {
+		Path jar = outputDir.resolve("manifest-test.jar");
+		Manifest manifest = new Manifest();
+		Attributes attrs = manifest.getMainAttributes();
+		attrs.put(Attributes.Name.MANIFEST_VERSION, "1.0");
+		attrs.put(Attributes.Name.MAIN_CLASS, "test.Main");
+		attrs.putValue(JarBuildStep.ATTR_BUILD_JDK, buildJdk);
+		manifestAttributes.forEach(attrs::putValue);
+		try (JarOutputStream ignored = new JarOutputStream(Files.newOutputStream(jar), manifest)) {
+			// Manifest-only JAR is enough for command generation tests.
+		}
+		return jar;
+	}
+
+	private static String collectMessages(Throwable t) {
+		StringBuilder sb = new StringBuilder();
+		while (t != null) {
+			if (t.getMessage() != null) {
+				sb.append(t.getMessage()).append('\n');
+			}
+			t = t.getCause();
+		}
+		return sb.toString();
 	}
 }
